--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "elassus": "^1.1.1",
+    "ember-a11y": "^0.1.14",
     "ember-ajax": "^3.0.0",
+    "ember-changeset": "^1.3.0",
+    "ember-changeset-validations": "^1.2.8",
     "ember-cli": "~2.14.0",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
@@ -26,6 +30,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^7.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -34,11 +39,19 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
+    "ember-text-mask": "^6.1.0",
+    "ember-text-mask-addons": "^5.0.0",
+    "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "text-mask-addons": "^3.6.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "open-iconic": "^1.1.1",
+    "vanilla-text-mask": "^5.0.1"
+  }
 }
